<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/fab_margin"
    android:paddingRight = "@dimen/fab_margin"
    android:paddingTop = "@dimen/fab_margin"
    android:orientation="vertical">



    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtfirstname_hint"
        android:inputType="text"
        android:textColorHint = "@color/colortxthint"
        />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtlastname_hint"
        android:inputType="text"
        android:textColorHint = "@color/colortxthint"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtemail_hint"
        android:inputType="textEmailAddress"
        android:textColorHint = "@color/colortxthint"/>

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtphonenumber_hint"
        android:inputType="phone"
        android:textColorHint="@color/colortxthint"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtpassword_hint"
        android:inputType="numberPassword"
        android:textColorHint = "@color/colortxthint"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Create Account"
        android:textColor="@color/colortxtbutton"
        android:background="@color/backgroundbutton"/>
</LinearLayout>